# spacy-partial-tagger

./: .gitignore  .gitmodules  LICENSE  README.md  config.cfg  config2.cfg  config_ja.cfg  config_light_weight.cfg  config_test.cfg  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  pypi-publish.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
notebooks/: bc5cdr.ipynb  ja_ud_gsd.ipynb
spacy_partial_tagger/: __init__.py  aligners.py  architecture.py  batchers.py  collator.py  convert.py  convert_ja.py  label_indexers.py  loss.py  pipeline.py  pipeline2.py  restructure.py  subsample_data_mayhew.py  tagger.py  tagger2.py  tokenizer.py  util.py
spacy_partial_tagger/layers/: constrainer.py  crf.py  decoder.py  encoder.py  energy_function.py  tok2vec_transformer.py  tok2vec_wrapper.py  util.py
tests/: conftest.py  test_aligners.py  test_convert.py  test_convert_ja.py  test_label_indexers.py  test_loss.py  test_pipeline.py  test_tagger.py  test_tokenizer.py  test_util.py
tests/layers/: test_constrainer.py  test_decoder.py  test_encoder.py  test_util.py
