[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spacy-partial-tagger"
description = "Sequence Tagger for Partially Annotated Dataset in spaCy"
requires-python = ">=3.8,<4.0"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Yasufumi Taniguchi", email = "yasufumi.taniguchi@gmail.com"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "thinc<9.0.0,>=8.0.15",
    "transformers[ja]<5.0.0,>=4.25.1",
    "torch<3.0.0,>=2.0.1",
    "spacy[transformers]<4.0.0,>=3.3.1",
    "spacy-alignments<1.0.0,>=0.8.5",
    "pytorch-partial-tagger<1.0.0,>=0.1.14",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/doccano/spacy-partial-tagger"

[project.optional-dependencies]
dev = [
    "mypy>=1.3.1",
    "black>=23.3.0",
    "pytest>=7.1.1",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "pytest-cov>=3.0.0",
    "ruff>=0.0.270",
]

[project.entry-points]
[project.entry-points.spacy_factories]
partial_ner = "spacy_partial_tagger.pipeline:make_partial_ner"

[project.entry-points.spacy_architectures]
"spacy-partial-tagger.PartialTagger.v1" = "spacy_partial_tagger.tagger:build_partial_tagger_v1"

[tool.hatch.version]
path = "spacy_partial_tagger/__about__.py"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
show_error_codes = true

[tool.black]
exclude = '''
/(
    .eggs
  | .git
  | .hg
  | .pytest_cache
  | .mypy_cache
  | .tox
  | .venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
]
ignore = ["E501"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--strict-markers -m 'not local'"
markers = [
    "local"
]
