[options.entry_points]
spacy_factories =
    partial_ner = spacy_partial_tagger.pipeline:make_partial_ner

spacy_tokenizers =
    character_tokenizer.v1 = spacy_partial_tagger.tokenizer:create_character_tokenizer

spacy_architectures =
    spacy-partial-tagger.PartialTransformerTagger.v1 = spacy_partial_tagger.architecture:build_partial_transformer_tagger

[flake8]
max-line-length = 88
max-complexity = 18
exclude = .git, .tox, .venv, .eggs, build, dist, docs
ignore = E203,W503,W504
